# Smart-PDF-Chat

./: .env  .env.example  README.md  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: query.py  upload.py
app/core/: config.py
app/models/: schema.py
app/services/: gcs.py  pinecone.py  rag.py  vertexai.py
app/static/: main.js
app/templates/: index.html
